--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+
 plugins {
     id 'com.gradleup.shadow' version '8.3.0'
     id 'org.jetbrains.kotlin.jvm' version '2.0.10'
@@ -48,9 +50,14 @@ dependencies {
     implementation("com.github.s5bug:Speedrun4J:a15010becb")
 }
 
+
 compileKotlin {
-    kotlinOptions.jvmTarget = "21"
+    compilerOptions {
+        jvmTarget.set(JvmTarget.JVM_21)
+    }
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "21"
+    compilerOptions {
+        jvmTarget.set(JvmTarget.JVM_21)
+    }
 }
